# community_events.resonite

./: .gitignore  Dockerfile  Dockerfile.mkdocs  README.md  TODO.md  alembic.ini  app.py  bot.py  config.toml  dev.docker-compose.yml  discord.py  docker-compose.yml  get_discord_server_list.py  prod.docker-compose.yml  pyproject.toml  release.sh  requirements.txt  stack-aliases.conf  test.py  test_copy.py  utils.py
.devcontainer/: devcontainer.json
.envrc.d/: community  official
EventsCollectors/: ApolloEventsCollector.py  DiscordEventsCollector.py  ExternalEventsCollector.py  GoogleCalendarEventsCollector.py  JSONEventsCollector.py  __init__.py  _base.py
EventsTransmitters/: NeosVRCalendarTransmitter.py  ResoniteCalendarTransmitter.py  __init__.py
StreamsCollectors/: TwitchStreamsCollector.py  __init__.py  _base.py
backend/: .gitignore  Dockerfile  README.md  config.toml  mkdocs.yml  pyproject.toml  server_docs.py
backend/docs/: support.md
backend/docs/ClientIntegration/: http-api-usage.md  versioning.md
backend/docs/DeveloperGuide/: installation.md  migrations.md  server-configuration.md  server-installation.md  usage.md
backend/docs/GettingStarted/: getting-started.md
backend/docs/Usage/: client-configuration.md  event-slinger.md  facet-client.md  facet-configuration.md  usage.md  web-client.md
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 101730d4316f_initialization.py  591df58a806c_add_metrics.py  740f7817910e_add_completed_event_status.py  858efba88fd4_initialization.py  fe0a337c8982_initialisation.py
backend/resonite_communities/: models.py  simple_discord.py  utils.py
backend/resonite_communities/api/: router.py  utils.py
backend/resonite_communities/api/routes/v1/: __init__.py  items.py
backend/resonite_communities/api/routes/v2/: __init__.py  items.py
backend/resonite_communities/auth/: db.py  users.py
backend/resonite_communities/client/: api.py  web_client.py
backend/resonite_communities/client/templates/: index.html
backend/resonite_communities/clients/api/: app.py
backend/resonite_communities/clients/middleware/: metrics.py
backend/resonite_communities/clients/models/: metrics.py
backend/resonite_communities/clients/web/: README.md  app.py  auth.py
backend/resonite_communities/clients/web/middleware/: metrics.py
backend/resonite_communities/clients/web/models/: metrics.py
backend/resonite_communities/clients/web/routers/: logout.py  main.py  metrics.py  utils.py
backend/resonite_communities/clients/web/routers/admin/: communities.py  metrics.py  utils.py
backend/resonite_communities/clients/web/templates/: admin_metrics.html  base.html  index.html
backend/resonite_communities/clients/web/templates/admin/: base.html  communities.html  metrics.html
backend/resonite_communities/clients/web/utils/: discord.py  filters.py  geoip.py
backend/resonite_communities/models/: base.py  community.py  signal.py
backend/resonite_communities/server/: signals_manager.py
backend/resonite_communities/server/templates/: index.html  login.html
backend/resonite_communities/signals/: __init__.py  manager.py  signal.py
backend/resonite_communities/signals/collectors/: __init__.py  collector.py  event.py  stream.py
backend/resonite_communities/signals/collectors/events/: __init__.py  _base.py  apollo.py  discord.py  external.py  google.py  json.py
backend/resonite_communities/signals/collectors/events/utils/: google.py
backend/resonite_communities/signals/collectors/streams/: _base.py  twitch.py
backend/resonite_communities/signals/transmitters/events/: __init__.py  resonite.py
backend/resonite_communities/utils/: __init__.py  google.py  text_api.py
bots/: __init__.py  _base.py  apollo.py  discord.py  google.py  twitch.py
docs/: mkdocs.yml
env.d/: community.env  official.env
migrations/: env.py  script.py.mako
resonite_communities/: app.py  bot.py  get_discord_server_list.py
scripts/: apply_backups.sh  clean_db.sh  make_backups.sh
templates/: index.html  login.html
tests/: test_discord_event_tagging.py  test_event_collector.py  test_formatter.py  test_metrics_client_detection.py
(+207 files in other folders)
